# wsid

./: .gitignore  MANIFEST  requirements.txt  setup.cfg  setup.py
disambiguation/: __init__.py  classify.py  cooccurrence.py  disambiguate.py  preprocess.py
disambiguation/induce/: hyperlex.py  induce.py
tests/: __init__.py  test_cooccurrence.py  test_induce.py  test_preprocess.py
wsid/: __init__.py  cooccurrence.py  disambiguate.py  preprocess.py
wsid/induce/: __init__.py  fci.py  hyperlex.py  induce.py  utils.py
