[metadata]
name = wsid
author = Artem Revenko
author-email = artem.revenko@semantic-web.com
summary = Induction and disambiguation of word senses using cooccurent words
# description-file = README.md
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    NLP

# [files]

# [entry_points]